--- a/src/App.css
+++ b/src/App.css
@@ -43,12 +43,11 @@
     border-radius: 0.25rem;
     margin: 1rem;
     user-select: none;
-    transition: 0.25s
 }
 
 .card:hover {
-    transform: translateY(-8px);
-    box-shadow: 0 10px 10px -10px #7f8c8d
+    //transform: translateY(-8px);
+    //box-shadow: 0 10px 10px -10px #7f8c8d
 }
 
 .user-card-header {
@@ -146,11 +145,6 @@ h2 {
     justify-content: center;
     align-items: center;
     font-size: 24px
-}
-
-.links a {
-    text-decoration: none;
-    margin: 1rem
 }
 
 .card-container {
