--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,34 @@
+body {
+    background-color: #f0eee9;
+}
+
+a {
+    color: #005c7d;
+}
+
 .App {
     text-align: center;
 }
 
 .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 50px;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    animation: pulse 3s infinite ease-in-out;
 }
 
 .App-header {
-    background-color: #222;
-    height: 100px;
-    padding: 20px;
-    color: white;
+    background-color: #333;
+    box-shadow: 0 2px 4px 0 #cdcdcd;
+    height: 200px;
+    padding: 10px;
+    color: #fff;
+}
+
+@keyframes pulse {
+    0% { transform: scale(0.9); opacity: 0.7; }
+    50% { transform: scale(1); opacity: 1; }
+    100% { transform: scale(0.9); opacity: 0.7; }
 }
 
 .App-title {
@@ -22,15 +39,6 @@
     font-size: large;
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
 .card {
     position: relative;
     max-width: 100%;
@@ -39,15 +47,33 @@
     min-height: 350px;
     display: flex;
     flex-flow: column;
-    background-color: #ecf0f1;
-    border-radius: 0.25rem;
+    background-color: #f5f5f5;
+    border-radius: 10px;
     margin: 1rem;
     user-select: none;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    transition: all 0.3s ease-in-out;
+    border: 1px solid rgba(0,0,0,0.2);
+}
+
+.card:after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transition: opacity 0.3s ease-in-out;
 }
 
 .card:hover {
-    //transform: translateY(-8px);
-    //box-shadow: 0 10px 10px -10px #7f8c8d
+    transform: scale(1.2, 1.2);
+}
+  
+.card:hover::after {
+    opacity: 1;
 }
 
 .user-card-header {
@@ -58,7 +84,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    border-radius: 0.25rem 0.25rem 0 0
+    border-radius: 10px 10px 0 0;
 }
 
 .album-card-header {
@@ -69,7 +95,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    border-radius: 0.25rem 0.25rem 0 0
+    border-radius: 10px 10px 0 0;
 }
 
 .user-card-avatar {
@@ -123,7 +149,7 @@
     border-top: 2px solid rgba(127, 140, 141, 0.2);
     border-right: 2px solid rgba(127, 140, 141, 0.2);
     min-width: 4rem;
-    padding: 0.25rem
+    padding: 10px 5px 5px 5px
 }
 
 .stat-container:last-child {
@@ -134,7 +160,8 @@
     display: flex;
     flex-flow: row;
     justify-content: center;
-    color: #7f8c8d
+    color: #7f8c8d;
+    text-transform: capitalize;
 }
 
 .stat-value {
@@ -142,7 +169,8 @@
     flex-flow: row;
     justify-content: center;
     color: #2c3e50;
-    font-weight: bold
+    font-weight: bold;
+    margin-bottom: 2px;
 }
 
 .card-link {
@@ -166,18 +194,43 @@ h2 {
 .card-container {
     display: flex;
     flex-flow: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 100%;
     box-sizing: border-box
 }
 
-@media screen and (max-width: 1100px) {
-    .card-container {
-        flex-flow: column
-    }
+.tokenRequest .user-card-header {
+    height: 140px;
 }
 
+.tokenRequest .user-card-avatar {
+    top: 40px;
+}
 
+.tokenRequest .error {
+    font-size: 15px;
+    text-align: left;
+    padding: 20px;
+}
 
+.tokenRequest .errorType {
+    font-weight: 700;
+    color: #cc0000;
+}
 
+.tokenRequest .stat-container input {
+    height: 20px;
+    width: 160px;
+    margin: 0;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 5px;
+    box-shadow: inset 0 2px 0 0 rgba(0,0,0,0.05);
+    color: #181a1c;
+    outline: none;
+    padding: 5px 4px 5px 6px;
+    font: inherit;
+    text-align: left;
+    vertical-align: middle;
+}
