--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,8 @@ a {
     transition: opacity 0.3s ease-in-out;
 }
 
-.card:hover {
+#activeMonsters .card:hover,
+#inactiveMonsters .card:hover {
     transform: scale(1.2, 1.2);
 }
   
@@ -234,3 +235,9 @@ h2 {
     text-align: left;
     vertical-align: middle;
 }
+
+/* .nowPlaying,
+#activeMonsters,
+#inactiveMonsters {
+    display: none;
+} */
