--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,11 @@ a {
     border-radius: 10px;
     margin: 1rem;
     user-select: none;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
     transition: all 0.3s ease-in-out;
     border: 1px solid rgba(0,0,0,0.2);
+    /* box-shadow: 0 1px 2px rgba(0,0,0,0.15); */
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transition: opacity 0.3s ease-in-out;
 }
 
 .card:after {
@@ -64,14 +66,14 @@ a {
     height: 100%;
     opacity: 0;
     border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
     transition: opacity 0.3s ease-in-out;
 }
 
-#activeMonsters .card:hover,
+/* #activeMonsters .card:hover,
 #inactiveMonsters .card:hover {
     transform: scale(1.2, 1.2);
-}
+} */
   
 .card:hover::after {
     opacity: 1;
